[package]
name = "quic-exfil"
version = "1.0.0"
edition = "2024"
authors = ["thomasgruebl"]
description = "Covert data exfiltration by mimicking QUIC server-side connection migrations."
license = "GNU General Public License v3.0"
repository = "https://github.com/thomasgruebl/quic-exfil"

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
etherparse = "0.17.0"
libc = "0.2.171"
once_cell = "1.21.3"
openssl = "0.10.72"
pcap = "2.2.0"
rand = "0.9.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
